Новый микросервис по переключателям
